# hermes-tps-counter

./: .gitignore  AGENTS.md  HERMES.md  LICENSE  README.md  __init__.py  api.py  config.py  conftest.py  dashboard.py  plugin.yaml  prometheus_metrics.py  pyproject.toml  store.py
.beads/: config.yaml  issues.jsonl
.beads/artifacts/her-6od/: completion-evidence.json  context-capsule.md  decisions.md  plan.md  prd.json  prd.md  progress.txt  solve-ledger.md  tasks.md
.beads/artifacts/her-br5/: completion-evidence.json  context-capsule.md  decisions.md  plan.md  prd.json  prd.md  progress.txt  solve-ledger.md  tasks.md
.beads/artifacts/her-cbe/: context-capsule.md  plan.md  prd.md  solve-ledger.md  tasks.md  worktree.txt
.beads/artifacts/her-chore-docs-quickstart-sj2/: completion-evidence.json  context-capsule.md  decisions.md  plan.md  prd.json  prd.md  progress.txt  solve-ledger.md  tasks.md
.beads/artifacts/her-config-module-czp/: decisions.md  plan.md  prd.json  prd.md  progress.txt  tasks.md
.beads/artifacts/her-core-plugin-tests-5ee/: context-capsule.md  decisions.md  plan.md  prd.json  prd.md  progress.txt  (+1 more)
MagicMock/mock.get_config().get()/: 133798463827984  133798465750928
tests/: conftest.py  test_api.py  test_config.py  test_core.py  test_dashboard.py  test_event_sampling.py  test_event_storage.py  test_hook.py  test_persistence.py  test_privacy.py  test_prometheus.py  test_provider_tps.py  test_rate_limiting.py  test_session_tps.py  test_store_delete.py  test_thread_safety.py  test_threshold_alerting.py  test_usage_parsing.py  test_websocket.py
(+197 files in other folders)
